--- a/2_hotel-booking/blocks/header/header.pug
+++ b/2_hotel-booking/blocks/header/header.pug
@@ -6,7 +6,7 @@ header
         .container
             .navbar__wrap
                 a.navbar__logo(href="#")
-                    img.navbar__logo-img(src=path+"img/logo-horizontal.svg", alt="Logo: Best Tour Plan")
+                    img.navbar__logo-img(src=path+"img/logo-horizontal.svg" alt="Logo: Best Tour Plan")
 
                 include ../search/search.pug
 
