--- a/2_hotel-booking/blocks/hotel-info/booking/modal/modal.pug
+++ b/2_hotel-booking/blocks/hotel-info/booking/modal/modal.pug
@@ -5,7 +5,7 @@ script(src=modal__path+"modal.js")
     .modal__overlay
     .modal__dialog
         a.modal__close(href="#")
-            img(src=modal__path+"img/close.svg")
+            img(src=modal__path+"img/close.svg" alt="Сlose icon")
         h2.modal__title Booking
         form.modal__form(action="#")
             .modal__form-wrap
