Deleted paralax plugin and added animation

--- a/2_hotel-booking/blocks/footer/footer.pug
+++ b/2_hotel-booking/blocks/footer/footer.pug
@@ -3,7 +3,7 @@ include ./config.pug
 footer.footer
     .container
         .footer__wrap.footer__wrap--top
-            img(src=path+"logo-vertical.svg", alt="Logo: Best Tour Plan").footer__logo
+            img(src=path+"logo-vertical.svg", alt="Logo: Best Tour Plan" data-aos="zoom-in" data-aos-delay="300").footer__logo
             .footer__list.footer__categories
                 h3.footer__title All categories
                 ul.footer__ul
