--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -1,10 +1,11 @@
 section.subscribe.content__subscribe
+    img.subscribe__paralax(src="/2_hotel-booking/blocks/subscribe/subscribe__img.jpg", alt="Image for paralax" data-scroll data-scroll-speed="0.5")
     .container
         .subscribe__wrap
-            h2.subscribe__title subscribe to our
+            h2.subscribe__title(data-aos="fade-left" data-aos-delay="100" data-aos-easing="ease-in-sine") subscribe to our
                 span.subscribe__strong <br>Newsletter
             
-            form.subscribe__form(action="#")
+            form.subscribe__form(action="#" data-aos="fade-left" data-aos-delay="300" data-aos-easing="ease-in-sine")
                 input.subscribe__input(
                     type="text"
                     placeholder="Your email address"
