--- a/2_hotel-booking/blocks/footer/_footer.scss
+++ b/2_hotel-booking/blocks/footer/_footer.scss
@@ -113,13 +113,13 @@
 
     &__form {
         display: grid;
-        grid-template-columns: repeat(2, minmax(1fr, 255px));
+        grid-template-columns: repeat(2, minmax(0px, 255px));
         gap: 15px 30px;
     }
 
     &__form-wrap {
         display: grid;
-        grid-template-columns: repeat(2, minmax(1fr, 255px));
+        grid-template-columns: repeat(2, minmax(0px, 255px));
         column-gap: 30px;
         grid-row: 1 / 2;
         grid-column: span 2;
