--- a/2_hotel-booking/blocks/subscribe/_subscribe.scss
+++ b/2_hotel-booking/blocks/subscribe/_subscribe.scss
@@ -1,6 +1,5 @@
 .subscribe {
     position: relative;
-    //background-image: url(/2_hotel-booking/blocks/subscribe/subscribe__img.jpg);
     background-position-y: 40%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,6 +10,18 @@
         top: 0;
         left: 0;
         background-color: rgba($dark, 0.8);
+        width: 100%;
+        height: 100%;
+    }
+
+    &__paralax {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        object-fit: cover;
         width: 100%;
         height: 100%;
     }
