Created paralax effect for Subscribe section

--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -1,5 +1,5 @@
 section.subscribe.content__subscribe
-    img.subscribe__paralax(src="/2_hotel-booking/blocks/subscribe/subscribe__img.jpg", alt="Image for paralax" data-scroll data-scroll-speed="0.5")
+    img.subscribe__paralax(src="/2_hotel-booking/blocks/subscribe/subscribe__img.jpg", alt="Image for paralax" data-speed="0.6")
     .container
         .subscribe__wrap
             h2.subscribe__title(data-aos="fade-left" data-aos-delay="100" data-aos-easing="ease-in-sine") subscribe to our
