--- a/2_hotel-booking/blocks/subscribe/_subscribe.scss
+++ b/2_hotel-booking/blocks/subscribe/_subscribe.scss
@@ -3,6 +3,8 @@
     background-position-y: 40%;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 260px;
+    overflow: hidden;
 
     &::before {
         content: '';
@@ -22,8 +24,10 @@
         bottom: 0;
         z-index: -1;
         object-fit: cover;
-        width: 100%;
-        height: 100%;
+        width: 100vmax;
+        height: 200%;
+        transform: translate(0,0);
+        pointer-events: none;
     }
 
     &__wrap {
