--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -2050,6 +2050,8 @@ button.swiper-pagination-bullet {
   background-position-y: 40%;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 260px;
+  overflow: hidden;
 }
 
 .subscribe::before {
@@ -2071,8 +2073,11 @@ button.swiper-pagination-bullet {
   z-index: -1;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 100vmax;
+  height: 200%;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+  pointer-events: none;
 }
 
 .subscribe__wrap {
