Added validate for Subscribe section

--- a/2_hotel-booking/blocks/subscribe/subscribe.pug
+++ b/2_hotel-booking/blocks/subscribe/subscribe.pug
@@ -7,7 +7,8 @@ section.subscribe.content__subscribe
             
             form.subscribe__form(action="#" data-aos="fade-left" data-aos-delay="300" data-aos-easing="ease-in-sine")
                 input.subscribe__input(
-                    type="text"
+                    type="email"
+                    name="subscribe"
                     placeholder="Your email address"
                     required)
                 button.subscribe__button Send
