--- a/2_hotel-booking/blocks/subscribe/_subscribe.scss
+++ b/2_hotel-booking/blocks/subscribe/_subscribe.scss
@@ -55,13 +55,17 @@
 
     &__form {
         width: 350px;
-        display: flex;
+        display: grid;
+        grid-template-columns: minmax(100px, 285px) 65px;
         justify-content: center;
         overflow: hidden;
         border-radius: 6px;
     }
 
     &__input {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        outline: none;
         width: 285px;
         min-height: 40px;
         border: none;
@@ -72,6 +76,8 @@
     }
     
     &__button {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
         @include font-mulish(12px, 700, $light, 15px);
         min-width: 65px;
         min-height: 40px;
