Added photos in slider and compressed all photos

--- a/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
+++ b/2_hotel-booking/blocks/hotel-info/_hotel-info.scss
@@ -66,6 +66,7 @@
     &__slider-item {
         position: relative;
         z-index: 1;
+        overflow: hidden;
     
         &::after {
             content: '';
