Compiled html and css

--- a/hotel-booking/src/blocks/hotel-info/slider/slider.pug
+++ b/hotel-booking/src/blocks/hotel-info/slider/slider.pug
@@ -4,7 +4,7 @@ include ./config.pug
     .swiper-wrapper
         for i in hotelPhotos
             .swiper-slide.hotel-info__slider-item
-                img(src=i alt="Slider").swiper-img
+                img(src=i alt="Slider").hotel-info__swiper-img
 
     button.swiper__btn.swiper-button-prev
     button.swiper__btn.swiper-button-next
