--- a/hotel-booking/src/css/style.css
+++ b/hotel-booking/src/css/style.css
@@ -365,7 +365,7 @@ img {
 
 @font-face {
   font-family: 'Mulish';
-  src: url("/hotel-booking/src/fonts/Mulish-Bold.woff2") format("woff2"), url("/hotel-booking/src/fonts/Mulish-Bold.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Mulish-Bold.woff2") format("woff2"), url("./hotel-booking/src/fonts/Mulish-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -373,7 +373,7 @@ img {
 
 @font-face {
   font-family: 'Mulish';
-  src: url("/hotel-booking/src/fonts/Mulish-Light.woff2") format("woff2"), url("/hotel-booking/src/fonts/Mulish-Light.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Mulish-Light.woff2") format("woff2"), url("./hotel-booking/src/fonts/Mulish-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -381,7 +381,7 @@ img {
 
 @font-face {
   font-family: 'Mulish';
-  src: url("/hotel-booking/src/fonts/Mulish-Regular.woff2") format("woff2"), url("/hotel-booking/src/fonts/Mulish-Regular.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Mulish-Regular.woff2") format("woff2"), url("./hotel-booking/src/fonts/Mulish-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -389,7 +389,7 @@ img {
 
 @font-face {
   font-family: 'Mulish';
-  src: url("/hotel-booking/src/fonts/Mulish-SemiBold.woff2") format("woff2"), url("/hotel-booking/src/fonts/Mulish-SemiBold.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Mulish-SemiBold.woff2") format("woff2"), url("./hotel-booking/src/fonts/Mulish-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -397,7 +397,7 @@ img {
 
 @font-face {
   font-family: 'Nunito';
-  src: url("/hotel-booking/src/fonts/Nunito-Regular.woff2") format("woff2"), url("/hotel-booking/src/fonts/Nunito-Regular.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Nunito-Regular.woff2") format("woff2"), url("./hotel-booking/src/fonts/Nunito-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -405,7 +405,7 @@ img {
 
 @font-face {
   font-family: 'Nunito';
-  src: url("/hotel-booking/src/fonts/Nunito-SemiBold.woff2") format("woff2"), url("/hotel-booking/src/fonts/Nunito-SemiBold.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Nunito-SemiBold.woff2") format("woff2"), url("./hotel-booking/src/fonts/Nunito-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -413,7 +413,7 @@ img {
 
 @font-face {
   font-family: 'Nunito';
-  src: url("/hotel-booking/src/fonts/Nunito-ExtraBold.woff2") format("woff2"), url("/hotel-booking/src/fonts/Nunito-ExtraBold.woff") format("woff");
+  src: url("./hotel-booking/src/fonts/Nunito-ExtraBold.woff2") format("woff2"), url("./hotel-booking/src/fonts/Nunito-ExtraBold.woff") format("woff");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -1677,7 +1677,7 @@ button.swiper-pagination-bullet {
   z-index: 3;
   border: none;
   background: none;
-  background-image: url("/hotel-booking/src/blocks/hotel-info/slider/img/button-prev.svg");
+  background-image: url("./hotel-booking/src/blocks/hotel-info/slider/img/button-prev.svg");
   background-size: 10px;
   background-repeat: no-repeat;
   background-position: center;
@@ -1691,7 +1691,7 @@ button.swiper-pagination-bullet {
   z-index: 4;
   border: none;
   background: none;
-  background-image: url("/hotel-booking/src/blocks/hotel-info/slider/img/button-next.svg");
+  background-image: url("./hotel-booking/src/blocks/hotel-info/slider/img/button-next.svg");
   background-size: 10px;
   background-repeat: no-repeat;
   background-position: center;
@@ -2202,7 +2202,7 @@ button.swiper-pagination-bullet {
   z-index: 3;
   border: none;
   background: none;
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/button-prev.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/button-prev.svg");
   background-size: 10px;
   background-repeat: no-repeat;
   background-position: center;
@@ -2216,7 +2216,7 @@ button.swiper-pagination-bullet {
   z-index: 4;
   border: none;
   background: none;
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/button-next.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/button-next.svg");
   background-size: 10px;
   background-repeat: no-repeat;
   background-position: center;
@@ -2266,7 +2266,7 @@ button.swiper-pagination-bullet {
 
 .reviews__slider-item::before {
   content: '';
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/qoute-left.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/qoute-left.svg");
   background-repeat: no-repeat;
   position: absolute;
   top: 12.8px;
@@ -2277,7 +2277,7 @@ button.swiper-pagination-bullet {
 
 .reviews__slider-item::after {
   content: '';
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/qoute-right.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/qoute-right.svg");
   background-repeat: no-repeat;
   position: absolute;
   bottom: 113.71px;
@@ -2287,12 +2287,12 @@ button.swiper-pagination-bullet {
 }
 
 .reviews__btn-prev {
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/button-prev-2.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/button-prev-2.svg");
   margin: 0;
 }
 
 .reviews__btn-next {
-  background-image: url("/hotel-booking/src/blocks/reviews/slider/img/button-next-2.svg");
+  background-image: url("./hotel-booking/src/blocks/reviews/slider/img/button-next-2.svg");
   margin: 0;
 }
 
